[package]
name = "entity_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
atomic_refcell = "0.1.13"
futures-buffered = "0.2.11"
n0-future = "0.1.3"
snafu = "0.8.6"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
testresult = "0.4.1"
